--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -404,8 +404,12 @@ DBSCAN ,or "Density-Based Spatial Clustering of Applications with Noise", is a c
 
 Two required parameters in the DBSCAN algorithm are:
 
--   *eps (Epsilon)*:
--   *MinPts*
+[<https://towardsdatascience.com/explaining-dbscan-clustering-18eaf5c83b31>
+
+<http://www.sefidian.com/2020/12/18/how-to-determine-epsilon-and-minpts-parameters-of-dbscan-clustering/>]
+
+-   *eps* : Eps stands for "Epsilon", which stands for the maximum radius of the neighborhood or the clusters, and is shown as the blue line in the above figure. The data points will be included in the clusters if their mutual distance is less than or equal to the value of epsilon. For the DBSCAN algorithm, larger eps will create broader clusters, which contains more data points; smaller eps will narrow clusters, which contains less data points. However, if eps is chosen too small for the dataset, a large part of the data points would be considered as the noise points and not be included in the clusters; if eps is chosen too large for the dataset, clusters will be merged and the majority of the data points will be included in one same cluster.
+-   *MinPts*: MinPts stands for "the minimum number of data points contains within the radius of a neighborhood", which is the value of 4 in the above figure.
 
 By changing the above two hyperparameter, the result of clustering may be varied.
 
@@ -413,9 +417,9 @@ Other important terms to understand how DBSCAN works are:
 
 [<https://www.dominodatalab.com/blog/topology-and-density-based-clustering>]
 
--   *Core points*
--   *Border points*
--   *Noise/ Ourliers*
+-   *Core points*:
+-   *Border points*:
+-   *Noise points/ Outliers*:
 
 ## Map clusters
 
