--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -409,7 +409,8 @@ Two required parameters in the DBSCAN algorithm are:
 <http://www.sefidian.com/2020/12/18/how-to-determine-epsilon-and-minpts-parameters-of-dbscan-clustering/>]
 
 -   *eps* : Eps stands for "Epsilon", which stands for the maximum radius of the neighborhood or the clusters, and is shown as the blue line in the above figure. The data points will be included in the clusters if their mutual distance is less than or equal to the value of epsilon. For the DBSCAN algorithm, larger eps will create broader clusters, which contains more data points; smaller eps will narrow clusters, which contains less data points. However, if eps is chosen too small for the dataset, a large part of the data points would be considered as the noise points and not be included in the clusters; if eps is chosen too large for the dataset, clusters will be merged and the majority of the data points will be included in one same cluster.
--   *MinPts*: MinPts stands for "the minimum number of data points contains within the radius of a neighborhood", which is the value of 4 in the above figure.
+
+-   *MinPts*: MinPts stands for "the minimum number of data points contains within the radius of a neighborhood" to be considered as a cluster, which is the value of 4 in the above figure. In the DBSCAN algorithm, the value MinPts should be at least 3 to be used as a valid value. A smaller value of MinPts used, more clusters and more outliers will be produced; a larger value of MinPts used, more robust clusters will be created.
 
 By changing the above two hyperparameter, the result of clustering may be varied.
 
@@ -417,11 +418,10 @@ Other important terms to understand how DBSCAN works are:
 
 [<https://www.dominodatalab.com/blog/topology-and-density-based-clustering>]
 
--   *Core points*:
+-   *Core points*: 
 -   *Border points*:
 -   *Noise points/ Outliers*:
 
-## Map clusters
 
 ```{r}
 #install.packages("fpc")
@@ -429,12 +429,22 @@ Other important terms to understand how DBSCAN works are:
 #install.packages("factoextra")
 ```
 
+### Determining eps: Elbow Method
+
+ In the DBSCAN algorithm, the best eps value is commonly found with a k-distance graph
+
 ```{r}
 scale.df <- df %>% scale()
 df.matrix <- as.matrix(scale.df)
 kNNdistplot(df.matrix, k=10)
 abline(h=2.5, col="red")
 ```
+
+### Determining MinPts
+- Approach 1: 
+- Approach 2: 
+
+## Map clusters
 
 ### eps = 0.5, MinPts = 18
 
@@ -493,8 +503,6 @@ plot(pr.out$x[,1], pr.out$x[,2],
 ```
 
 [PCA got a dense single group may be why we only got one cluster in DBscan. ref: <https://stackoverflow.com/questions/48051800/why-dbscan-clustering-returns-single-cluster-on-movie-lens-data-set>]
-
-## Map clusters
 
 ```{r, out.width='150%'}
 # add country names to clusters
